--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               class="product-img"
             />
             <h4 class="product-title">ginger peach tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">12.00 ETB</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -172,7 +172,7 @@
               class="product-img"
             />
             <h4 class="product-title">fruit sangria</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">8.99 ETB</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -183,7 +183,7 @@
               class="product-img"
             />
             <h4 class="product-title">white tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">10.00 ETB</h4>
           </div>
           <!-- end of single product -->
         </article>
@@ -295,7 +295,7 @@
             </h4>
             <h4 class="contact-text">
               523 N Fairfax Ave <br />
-              Los Angeles, CA 90048
+              Bahir Dar, CA 90048
             </h4>
           </div>
           <!-- end of contact item -->
@@ -321,7 +321,7 @@
               telephone
             </h4>
             <h4 class="contact-text">
-              + 123 456 789
+              + 251 900000000
             </h4>
           </div>
           <!-- end of contact item -->
