--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
               class="product-img"
             />
             <h4 class="product-title">ginger peach tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">12.00 ETB</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -86,7 +86,7 @@
               class="product-img"
             />
             <h4 class="product-title">fruit sangria</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">8.99 ETB</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -97,7 +97,7 @@
               class="product-img"
             />
             <h4 class="product-title">white tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-price">10.00 ETB</h4>
           </div>
           <!-- end of single product -->
         </article>
