--- a/skills.html
+++ b/skills.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hio<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -54,7 +54,7 @@
         <span class="skill-icon">
           <i class="fas fa-mug-hot"></i>
         </span>
-        <h4 class="skill-title">made in US</h4>
+        <h4 class="skill-title">made in Ethiopia</h4>
         <p class="skill-text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis,
           rerum?
